color contrast ratio corrected

--- a/src/components/recomended-articles/sass/recomended-content.scss
+++ b/src/components/recomended-articles/sass/recomended-content.scss
@@ -117,6 +117,7 @@
 		    font-weight: 700;
 		    font-size: 0.9em;
 		    display: block;
+		    color:$grey-color04;
 		    span {
 		    	&:after {
 		    		content: ',';
